--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Your Name</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chuer Yang</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hi, I'm Chuer 👋</h1>
-  <p>Stanford undergrad interested in AI, energy, and sustainability.</p>
+  <div class="container">
+    <header>
+      <h1>Chuer Yang</h1>
+      <nav>
+        <a href="pages/doing.html">Doing</a>
+        <a href="pages/thinking.html">Thinking</a>
+        <a href="pages/enjoying.html">Enjoying</a>
+        <a href="pages/people.html">Cool People</a>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <p>Hi! I'm Chuer, a Stanford undergrad studying Symbolic Systems interested in AI & sustainability.</p>
+      </section>
+
+      <section class="img-gallery">
+        <img src="assets/dome1.jpg" alt="Geodesic Dome" />
+        <figcaption>I built a geodesic dome at Half Moon Bay for my 20th birthday!</figcaption>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
