--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <h1>Chuer Yang</h1>
       <nav>
-        <a href="pages/doing.html">Doing</a>
-        <a href="pages/thinking.html">Thinking</a>
-        <a href="pages/enjoying.html">Enjoying</a>
-        <a href="pages/people.html">Cool People</a>
+        <a href="doing.html">Doing</a>
+        <a href="thinking.html">Thinking</a>
+        <a href="enjoying.html">Enjoying</a>
+        <a href="people.html">Cool People</a>
       </nav>
     </header>
 
@@ -24,7 +24,7 @@
       </section>
 
       <section class="img-gallery">
-        <img src="assets/dome1.jpg" alt="Geodesic Dome" />
+        <img src="assets/dome1.jpg" alt="Geodesic Dome" style="width: 400px; height: auto;" />
         <figcaption>I built a geodesic dome at Half Moon Bay for my 20th birthday!</figcaption>
       </section>
     </main>
