--- a/sustainability.html
+++ b/sustainability.html
@@ -129,8 +129,8 @@
                 <div class="date">july 2025 — present</div>
             </div>
             <div class="work-content">
-                <p>conducting large-scale analysis of climate-focused conversational datasets. bridging community perspectives through data-driven narrative analysis of environmental sentiment.</p>
-                <div class="stack">nlp / data analysis / research</div>
+                <p>Analyzing climate-focused narratives to bridge community perspectives on the East and West Coast.</p>
+                <div class="stack"> communications research</div>
             </div>
         </div>
 
@@ -161,7 +161,7 @@
 
         <div class="sidebar-card">
             <h3>green ai institute</h3>
-            <p>white paper researcher assessing fission and fusion scalability for global data center siting policy.</p>
+            <p>white paper researcher assessing fission co-location for global data center siting policy.</p>
         </div>
 
         <div class="sidebar-card">
