--- a/enjoying.html
+++ b/enjoying.html
@@ -307,6 +307,7 @@
                 <ul>
                     <li>Landscape with the Fall of Icarus - <strong>Bruegel</strong></li>
                     <li>Water Lilies - <strong>Monet</strong></li>
+                    <li>Christ Crucified - <strong>El Greco</strong></li>
                 </ul>
             </div>
         </div>
