--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="content">
         <h2>PRODUCT</h2>
         <p>combining <strong>data</strong> + <strong>design</strong> </p>
-        <p>to create<br><a href="/projects.html/">→ projects</a></p>
+        <p>to create<br><a href="/cgyer/projects.html">→ projects</a></p>
       </div>
     </div>
   </div>
