sustainability profile updates

--- a/sustainability.html
+++ b/sustainability.html
@@ -112,37 +112,37 @@
 
         <div class="work-block">
             <div class="work-header">
-                <h2>hollberg lab</h2>
-                <div class="org">hansen experimental physics lab</div>
+                <h2>Hollberg Lab</h2>
+                <div class="org">Hansen Experimental Physics Lab</div>
                 <div class="date">2024 — present</div>
             </div>
             <div class="work-content">
-                <p>developing computational modeling for open-path spectroscopy. i program and deploy raspberry pi–based data acquisition pipelines on linux for laser-based methane instrumentation in field conditions at jasper ridge.</p>
-                <div class="stack">python / jupyter / linux / spectroscopy</div>
+                <p> open-path spectroscopy for low-cost methane measurement. i program and deploy raspberry pi–based data acquisition pipelines on linux for laser-based methane instrumentation in field conditions at jasper ridge.</p>
+                <div class="stack">python / jupyter / linux </div>
             </div>
         </div>
 
         <div class="work-block">
             <div class="work-header">
-                <h2>cortico</h2>
-                <div class="org">mit media lab</div>
+                <h2>Cortico</h2>
+                <div class="org">MIT Media Lab</div>
                 <div class="date">july 2025 — present</div>
             </div>
             <div class="work-content">
                 <p>Analyzing climate-focused narratives to bridge community perspectives on the East and West Coast.</p>
-                <div class="stack"> communications research</div>
+                <div class="stack"> communications research / conversation design </div>
             </div>
         </div>
 
         <div class="work-block">
             <div class="work-header">
-                <h2>sustainable investment group</h2>
+                <h2>Stanford Sustainable Investment Group</h2>
                 <div class="org">investment analyst</div>
                 <div class="date">march 2025 — present</div>
             </div>
             <div class="work-content">
                 <p>technical due diligence on fission and fusion startups. identifying high-beta spotlight companies to advise the westly group on strategic energy venture capital.</p>
-                <div class="stack">due diligence / energy vc / fusion tech</div>
+                <div class="stack"> due diligence </div>
             </div>
         </div>
     </div>
@@ -155,17 +155,17 @@
         </div>
 
         <div class="sidebar-card">
-            <h3>stanford climate week</h3>
+            <h3>Stanford Climate Week</h3>
             <p>hosted the <span class="fusion-accent">cto of commonwealth fusion systems</span> to discuss the commercialization of magnetic confinement and the future of star-power on the grid.</p>
         </div>
 
         <div class="sidebar-card">
-            <h3>green ai institute</h3>
+            <h3>Green AI Institute</h3>
             <p>white paper researcher assessing fission co-location for global data center siting policy.</p>
         </div>
 
         <div class="sidebar-card">
-            <h3>usgs</h3>
+            <h3>United States Geological Survey</h3>
             <p>hydrology fieldwork in the san joaquin delta, monitoring water quality and analyzing drought impacts on regional ecosystems.</p>
         </div>
     </div>
