updates to enjoying

--- a/enjoying.html
+++ b/enjoying.html
@@ -230,10 +230,8 @@
 
     <div class="recently-section">
         <h2>RECENTLY</h2>
-        <p><strong>Currently:</strong></p>
         <p>→ <em>Zen and the Art of Motorcycle Maintenance</em></p>
         <p>→ The Short Stories of Chekhov</p>
-        <p>→ <em>Siddhartha</em> – Hermann Hesse</p>
     </div>
 
     <div class="map-anchor">
@@ -261,12 +259,15 @@
                         <h3>Poetry</h3>
                         <ul>
                             <li><em>Odes</em> – <strong>Fernando Pessoa</strong></li>
-                            <li><em>Aedh Wishes</em> – <strong>W.B. Yeats</strong></li>
+                            <li><em>Aedh Wishes for the Cloths of Heaven</em> – <strong>W.B. Yeats</strong></li>
+                            <li><em>Archaic Torso of Apollo</em> – <strong>Rainer Maria Rilke</strong></li>
                         </ul>
                         <h3 style="margin-top: 30px;">Pillars of Thought</h3>
                         <ul>
-                            <li>Meditations – <strong>Descartes</strong></li>
-                            <li>Nicomachean Ethics – <strong>Aristotle</strong></li>
+                          <li>Siddhartha – <strong>Hermann Hesse</strong></li>
+                          <li>Existentialism is a Humanism – <strong>Jean-Paul Sartre</strong></li>
+                          <li>Meditations – <strong>Descartes</strong></li>
+                          <li>Nicomachean Ethics – <strong>Aristotle</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -281,7 +282,7 @@
                 <h2>CARTOGRAPHY</h2>
                 <div class="two-column-grid">
                     <div class="column">
-                        <p>Thanks to Professor Wigen and David Rumsey.</p>
+                        <p>Thanks to Professor Wigen and David Rumsey!</p>
                         <h3>Foundations</h3>
                         <ul>
                             <li><a href="https://www.davidrumsey.com/" target="_blank">Rumsey Map Collection</a></li>
